name: options
version: 0.1
license: MIT
license-file: license.txt
author: John Millikin <jmillikin@gmail.com>
maintainer: John Millikin <jmillikin@gmail.com>
build-type: Simple
cabal-version: >= 1.6
category: 
stability: experimental
homepage: https://john-millikin.com/software/haskell-options/
bug-reports: mailto:jmillikin@gmail.com

synopsis: Parsing command-line options
description:

extra-source-files:
  scripts/common.bash
  scripts/run-coverage
  scripts/run-tests
  --
  tests/options-tests.cabal
  tests/OptionsTests.hs
  tests/OptionsTests/Help.hs
  tests/OptionsTests/OptionTypes.hs
  tests/OptionsTests/Tokenize.hs

source-repository head
  type: bazaar
  location: https://john-millikin.com/branches/haskell-options/0.1/

source-repository this
  type: bazaar
  location: https://john-millikin.com/branches/haskell-options/0.1/
  tag: haskell-options_0.1

library
  ghc-options: -Wall -O2
  hs-source-dirs: lib

  if os(windows)
      cpp-options: -DCABAL_OS_WINDOWS

  build-depends:
      base >= 4.0 && < 5.0
    , transformers >= 0.2 && < 0.3
    , bytestring >= 0.9 && < 0.10
    , containers >= 0.1 && < 0.5
    , monads-tf
    , system-filepath >= 0.4 && < 0.5
    , text >= 0.7 && < 0.12
    , template-haskell

  exposed-modules:
    Options

  other-modules:
    Options.Help
    Options.OptionTypes
    Options.Tokenize
    Options.Types
