name: options-tests
version: 0
build-type: Simple
cabal-version: >= 1.6

flag coverage
  default: False
  manual: True

executable options_tests
  main-is: OptionsTests.hs
  ghc-options: -Wall
  hs-source-dirs: ../lib,.

  if flag(coverage)
    ghc-options: -fhpc

  if os(windows)
      cpp-options: -DCABAL_OS_WINDOWS

  build-depends:
      base >= 4.0 && < 5.0
    , bytestring
    , chell >= 0.2 && < 0.3
    , chell-quickcheck >= 0.1 && < 0.2
    , containers
    , monads-tf
    , QuickCheck
    , split
    , template-haskell
    , text
    , transformers

