name: options-tests
version: 0
build-type: Simple
cabal-version: >= 1.6

flag coverage
  default: False
  manual: True

executable options_tests
  main-is: OptionsTests.hs
  ghc-options: -Wall
  cc-options: -Wall
  hs-source-dirs: ../lib,.

  if flag(coverage)
    ghc-options: -fhpc

  if os(windows)
      cpp-options: -DCABAL_OS_WINDOWS

  if !os(windows) && impl(ghc < 7.2)
      cpp-options: -DOPTIONS_ENCODING_UTF8
      c-sources: ../cbits/utf8.c

  build-depends:
      base >= 4.0 && < 5.0
    , bytestring
    , chell >= 0.3.1 && < 0.4
    , chell-quickcheck >= 0.2 && < 0.3
    , containers
    , monads-tf
    , QuickCheck
    , split
    , system-filepath >= 0.4 && < 0.5
    , template-haskell
    , text
    , transformers

